--- a/src/excel.css
+++ b/src/excel.css
@@ -89,9 +89,9 @@ a{
 .resizeS{
     position: absolute;
     cursor: s-resize;
-    height: 8px;
+    height: 6px;
     width: 100%;
-    bottom: -4px;
+    bottom: -3px;
     left:0;
     z-index: 10;
 }
@@ -122,6 +122,7 @@ a{
 }
 .rowHeader {
     position: relative;
+    overflow: hidden;
     width: 36px;
     min-width: 36px;
     max-width: 36px;
